# light-chat

./: .gitignore  AGENTS.MD  IMPLEMENTATION_SUMMARY.md  README.md  analyze_rag_text.py  build_flash_attention.py  build_flash_attention.sh  chat_tui.py  collection_helper.py  context_manager.py  conversation_manager.py  cuda_build_log.txt  gpu_utils.py  main.py  manage_collections.py  prepare_rag.py  push_rag_data.py  pyproject.toml  test_gpu_auto.py  test_kv_quantization.py  test_rag_scripts.py  web_app.py
.github/: copilot-instructions.md
.github/workflows/: quality_gate.yml
cards/: Shodan-specV2.json  leonardo_da_vinci.json
configs/: appconf.json  config.v2.json  conversation_template.json  modelconf.json
core/: collection_helper.py  config.py  context_manager.py  conversation_manager.py  conversation_model_setup_mixin.py  conversation_prompt_history_mixin.py  conversation_response_mixin.py  conversation_retrieval_backend_mixin.py  conversation_retrieval_keyfile_mixin.py  conversation_retrieval_mixin.py  conversation_retrieval_orchestration_mixin.py  conversation_retrieval_postprocess_mixin.py  persona_drift.py  retrieval_keys.py  retrieval_shared_types.py
docs/: AUTO_GPU_LAYERS.md  CONVERSATION_QUALITY.md  FLASH_ATTENTION_BUILD.md  RAG_DOCUMENT_QUALITY.md  RAG_QUALITY_IMPROVEMENT.md  RAG_SCRIPTS_GUIDE.md  quality_gate.md
docs/configs/: 00_README.md  01_CONFIG_V2.md  02_CONVERSATION_TEMPLATE.md
docs/context_management/: 00_README.md  01_QUICKSTART.md  02_HOW_IT_WORKS.md  03_CONFIGURATION.md  04_EXAMPLES.md  05_VISUALIZATION.md  06_TROUBLESHOOTING.md  07_IMPLEMENTATION.md
docs/future_work/: CONVERSATION_MANAGER_HOLISTIC_REVIEW.md  CONVERSATION_QUALITY.md  COPILOT_AGENT_PROMPTS.md  COPILOT_COMPACT_REFERENCE.md  RAG_DOCUMENT_QUALITY.md  RAG_QUALITY_IMPROVEMENT.md  REFINEMENTS.md  TUI_RAG_CHATBOT_IMPROVEMENTS.md  UI_REFINEMENTS.md  WEB_APP_RAG_CHATBOT_IMPROVEMENTS.md
docs/legacy/: ALLOCATION_EXAMPLES.md  CONTEXT_VISUALIZATION.md  DYNAMIC_CONTEXT.md  IMPLEMENTATION.md  QUICKSTART.md  README_DYNAMIC_CONTEXT.md
docs/rag_management/: 00_README.md  01_ANALYZE_RAG_TEXT.md  02_PUSH_RAG_DATA.md  03_MANAGE_COLLECTIONS.md  04_OLD_PREPARE_RAG.md  05_WORKFLOWS_TROUBLESHOOTING.md  CATEGORY_CONFIG.md  COVERAGE.md  LINTING.md  MESSAGE_EXAMPLES_STYLE.md
logs/code_quality/: history.csv  latest.json
rag_data/: leonardo_da_vinci.json  leonardo_da_vinci.txt  leonardo_da_vinci_message_examples.txt  shodan.json  shodan.txt  shodan_message_examples.txt  shodan_test.json
rag_data/archive/: shodan.json
rag_data/legacy/: leonardo_da_vinci_message_examples.txt  shodan_message_examples.txt
scripts/: analyze_rag_text.py  build_cuda_only.ps1  build_flash_attention.ps1  build_flash_attention.py  build_flash_attention.sh  fetch_character_context.py  manage_collections.py  old_prepare_rag.py  output.json  push_rag_data.py  quality_gate.py
scripts/context/: __init__.py  fetch_character_context.py
scripts/conversation/: capture_baselines.py  evaluate_quality.py
scripts/quality/: capture_code_metrics.py
scripts/rag/: __init__.py  analyze_rag_coverage.py  analyze_rag_text.py  analyze_rag_text_analysis.py  analyze_rag_text_enrichment.py  analyze_rag_text_types.py  analyze_rag_text_validation.py  benchmark_embedding_models.py  lint_message_examples.py  manage_collections.py  manage_collections_commands_collections.py  manage_collections_commands_coverage.py  manage_collections_commands_eval.py  manage_collections_commands_lint.py  manage_collections_commands_migration.py  manage_collections_config_categories.py  manage_collections_core.py  manage_collections_core_collection.py  manage_collections_core_evaluation.py  manage_collections_core_metrics.py  manage_collections_core_types.py  migrate_collection_embedding.py  old_prepare_rag.py  push_rag_data.py
templates/: chat_message_pair.html  chat_messages.html  chat_single_message.html  index.html
tests/: test_capture_code_metrics.py  test_context_manager.py  test_conversation_quality_eval.py  test_gpu_auto.py  test_history_summarization.py  test_kv_quantization.py  test_manage_collections_backfill.py  test_persona_drift.py  test_quality_gate.py  test_rag_data_quality.py  test_rag_scripts.py  test_rag_validation.py  test_response_processing.py  test_retrieval_fixtures.py  test_retrieval_keys.py  test_retrieval_metrics.py  test_script_entrypoints.py  test_search_collection.py  test_web_app_utils.py
tests/fixtures/: conversation_fixtures.json  conversation_fixtures_hard.json  conversation_fixtures_negative.json  retrieval_fixtures.json  retrieval_fixtures_hard.json  retrieval_fixtures_negative.json  retrieval_fixtures_rerank.json
