[project]
name = "light-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "chromadb>=1.4.1",
    "click>=8.0.0",
    "icecream>=2.1.7",
    "langchain>=0.3.27",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=1.2.0",
    "llama-cpp-python>=0.3.16",
    "loguru>=0.7.0",
    "nvidia-ml-py>=13.590.48",
    "requests>=2.31.0",
    "sentence-transformers>=5.2.2",
    "textual>=8.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "PERF",
    "FURB",
    "RUF",
]
ignore = ["FBT001", "S603", "G004", "S607", "COM812"]
unfixable = [
    # Don't touch unused imports
    "F401",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
