[project]
name = "light-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "chromadb>=1.4.1",
    "click>=8.0.0",
    "fastapi>=0.116.1",
    "icecream>=2.1.7",
    "jinja2>=3.1.6",
    "langchain>=0.3.27",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=1.2.0",
    "llama-cpp-python>=0.3.16",
    "loguru>=0.7.0",
    "nvidia-ml-py>=13.590.48",
    "python-multipart>=0.0.20",
    "requests>=2.31.0",
    "sentence-transformers>=5.2.2",
    "uvicorn>=0.35.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "PERF",
    "FURB",
    "RUF",
]
ignore = ["FBT001", "S603", "G004", "S607", "COM812"]
unfixable = [
    # Don't touch unused imports
    "F401",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "ANN"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[project.scripts]
quality-gate = "scripts.quality_gate:quality_gate"
capture-conversation-baselines = "scripts.conversation.capture_baselines:capture_conversation_baselines"
capture-code-metrics = "scripts.quality.capture_code_metrics:capture_code_metrics"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "radon>=6.0.1",
    "ruff>=0.9.0",
    "xenon>=0.9.3",
]

[tool.coverage.run]
source = ["core", "scripts"]
omit = [
    "tests/*",
    "scripts/build/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
